@@ -24,4 +24,6 @@ echo '"Plural-Forms: nplurals=2; plural=(n > 1);\n"'>> translation/skychart/skyc
 
 cat ../skychart.po >> translation/skychart/skychart.pot
 
-tar cvf skychartpot.tar translation/skychart/skychart.pot
+cd translation
+tar cvf ../skychartpot.tar skychart/skychart.pot
+cd -
