@@ -1,11 +1,13 @@
 Version 3.5 release Notes
 
+- Add distance measurement tool.
 - Add chart legend. See menu Chart / Labels
 - Change in projection mapping:
   - Add Mercator projection. 
   - Cartesian and Mercator projection are rotated to the screen center for full sky coverage.
   - Change the default projection to Tangent for FOV up to 90 deg. and Mercator for widther fields.
   - Limit the use of Arc projection to 250 deg. FOV.
+  - Limit the vision of objects below the horizon to 180 deg. FOV.
 - New default star catalog based on Extended Hipparcos to replace the BSC and Sky2000.
 - Improved precision of the apparent coordinates (many thanks to P. Wallace for its help):
   - Star parallax
